<resources>
    <string name="app_name">ParkEzy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Driver</string>
    <string name="nav_header_subtitle">driver@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Find Nearby Parking</string>
    <string name="menu_create_parking">Rent a parking</string>
    <string name="menu_logout">Logout</string>
    <string name="set_your_location">Set your Location</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tv_title">Title</string>
    <string name="tv_description">Land mark details</string>
    <string name="description">text description land mark details.</string>
    <string name="rs">\u20B9</string>
    <string name="park_title">Parking \u20B920/hr</string>
    <string name="pay">Pay</string>
    <string name="add_car">Add Car</string>
    <string name="menu_manage_vehicle">Manage Vehicles</string>
    <string name="size">Size</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>