<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.whiterwalkers.parkezy.ui.home.MapsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_manage_parking"
        android:name="com.whiterwalkers.parkezy.ui.parkinglots.manageparking.ManageParkingFragment"
        android:label="@string/menu_create_parking"
        tools:layout="@layout/fragment_manage_parking" >
        <action
            android:id="@+id/action_nav_manage_parking_to_nav_create_parking"
            app:destination="@id/nav_create_parking" />
    </fragment>
    <fragment
        android:id="@+id/nav_create_parking"
        android:name="com.whiterwalkers.parkezy.ui.parkinglots.createparking.CreateParkingFragment"
        android:label="Create Parking Spot"
        tools:layout="@layout/fragment_create_parking" />
    <fragment
        android:id="@+id/nav_manage_vehicles"
        android:name="com.whiterwalkers.parkezy.ui.parkinglots.createparking.CreateParkingFragment"
        android:label="@string/menu_create_parking"
        tools:layout="@layout/fragment_create_parking" />
    <fragment
        android:id="@+id/nav_payments"
        android:name="com.whiterwalkers.parkezy.ui.parkinglots.createparking.CreateParkingFragment"
        android:label="@string/menu_create_parking"
        tools:layout="@layout/fragment_create_parking" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.whiterwalkers.parkezy.ui.parkinglots.createparking.CreateParkingFragment"
        android:label="@string/menu_create_parking"
        tools:layout="@layout/fragment_create_parking" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.whiterwalkers.parkezy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />
</navigation>